set up antithetic variables

--- a/experiments/variance_reduction/plot_notebook.ipynb
+++ b/experiments/variance_reduction/plot_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "id": "tested-michigan",
    "metadata": {},
    "outputs": [],
@@ -17,6 +17,8 @@
     "from scipy.stats import gaussian_kde\n",
     "import sys\n",
     "sys.path.append(\"../../sample\")\n",
+    "sys.path.append(\"../../utils\")\n",
+    "from constants import V_MAX\n",
     "from radial_density import RadialDensity\n",
     "\n",
     "plt.rc('font', family='serif')\n",
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "id": "accomplished-eligibility",
    "metadata": {},
    "outputs": [],
@@ -55,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 3,
    "id": "exclusive-reynolds",
    "metadata": {},
    "outputs": [],
@@ -68,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 4,
    "id": "illegal-disposition",
    "metadata": {},
    "outputs": [],
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 5,
    "id": "complimentary-dictionary",
    "metadata": {},
    "outputs": [
@@ -96,7 +98,7 @@
        "Text(0.5, 0, 's')"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -154,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 6,
    "id": "rural-calculator",
    "metadata": {},
    "outputs": [],
@@ -176,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 7,
    "id": "given-stack",
    "metadata": {},
    "outputs": [
@@ -215,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 8,
    "id": "blond-comfort",
    "metadata": {},
    "outputs": [
@@ -245,6 +247,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "mysterious-novelty",
+   "metadata": {},
+   "source": [
+    "## Control variate using vpar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "welsh-conclusion",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MC mean 0.0071478412399875605\n",
+      "MC std 0.00445097255730962\n",
+      "CV mean 0.007145541591974859\n",
+      "CV std 0.004428888284448553\n",
+      "Reduction in standard deviation 0.004961673561612812\n",
+      "Effective increase in number of samples 1.0099976933752273\n"
+     ]
+    }
+   ],
+   "source": [
+    "vpar_mean = 0.0\n",
+    "vpar_std = (2*V_MAX) /np.sqrt(12)\n",
+    "cv = control_variate(c_times,vpar_inits,vpar_mean,vpar_std)\n",
+    "print('MC mean',np.mean(c_times))\n",
+    "print('MC std',np.std(c_times))\n",
+    "print('CV mean',np.mean(cv))\n",
+    "print('CV std',np.std(cv))\n",
+    "print(\"Reduction in standard deviation\",1-np.std(cv)/np.std(c_times))\n",
+    "alpha = np.std(cv)/np.std(c_times)\n",
+    "print(\"Effective increase in number of samples\",1/alpha**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "recent-apollo",
    "metadata": {},
    "source": [
@@ -253,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 10,
    "id": "radical-brief",
    "metadata": {},
    "outputs": [
@@ -293,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 11,
    "id": "polish-myrtle",
    "metadata": {},
    "outputs": [
@@ -368,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 12,
    "id": "owned-criterion",
    "metadata": {},
    "outputs": [
@@ -407,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 13,
    "id": "southwest-postcard",
    "metadata": {},
    "outputs": [
@@ -445,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 14,
    "id": "pressed-elephant",
    "metadata": {},
    "outputs": [
@@ -509,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 15,
    "id": "found-vegetarian",
    "metadata": {},
    "outputs": [
@@ -531,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 16,
    "id": "functional-jamaica",
    "metadata": {},
    "outputs": [
@@ -567,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 17,
    "id": "attempted-latino",
    "metadata": {},
    "outputs": [
@@ -594,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 18,
    "id": "clinical-biotechnology",
    "metadata": {},
    "outputs": [
@@ -633,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 19,
    "id": "australian-darkness",
    "metadata": {},
    "outputs": [
@@ -660,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 20,
    "id": "racial-perth",
    "metadata": {},
    "outputs": [
@@ -720,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 21,
    "id": "experimental-princess",
    "metadata": {},
    "outputs": [
@@ -766,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 22,
    "id": "grateful-chicken",
    "metadata": {},
    "outputs": [
@@ -802,9 +844,176 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "physical-beads",
+   "metadata": {},
+   "source": [
+    "# Antithetic Variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "moderate-crystal",
+   "metadata": {},
+   "source": [
+    "## Antithetic variable G(f) using vpar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "recognized-electricity",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stz_anti1 = indata['antithetic']['stz_anti1'] \n",
+    "vpar_anti1 = indata['antithetic']['vpar_anti1']\n",
+    "c_times_anti1 = indata['antithetic']['c_times_anti1']\n",
+    "mu_anti1 = indata['antithetic']['mu_anti1']\n",
+    "s_pdf_anti1= indata['antithetic']['s_pdf_anti1']\n",
+    "stz_anti2 = indata['antithetic']['stz_anti2'] \n",
+    "vpar_anti2 = indata['antithetic']['vpar_anti2']\n",
+    "c_times_anti2 = indata['antithetic']['c_times_anti2']\n",
+    "s_pdf_anti2 = indata['antithetic']['s_pdf_anti2']\n",
+    "mu_anti2 = indata['antithetic']['mu_anti2']\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "simplified-raising",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.007072625309460987\n",
+      "0.002785616498572657\n",
+      "-0.2221675353008099\n",
+      "Reduction in standard deviation 0.3741555440511599\n",
+      "Effective increase in number of samples 2.5530962118836458\n"
+     ]
+    }
+   ],
+   "source": [
+    "av = c_times_anti1*s_pdf_anti1 + c_times_anti2*s_pdf_anti2\n",
+    "print(np.mean(av))\n",
+    "print(np.std(av))\n",
+    "print(np.corrcoef(c_times_anti1*s_pdf_anti1,c_times_anti2*s_pdf_anti2)[0,1])\n",
+    "print(\"Reduction in standard deviation\",1-np.std(av)/np.std(c_times))\n",
+    "alpha = np.std(av)/np.std(c_times)\n",
+    "print(\"Effective increase in number of samples\",1/alpha**2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "recreational-british",
+   "metadata": {},
+   "source": [
+    "### Combining the Antithetic RV with stratified sampling over s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "satellite-property",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reduction in standard deviation in strata1 0.1420957942778288\n",
+      "Reduction in standard deviation in strata2 -0.037967717374816745\n",
+      "0.002389792109654551 0.00289137999850509 0.00445097255730962\n",
+      "SS mean 0.0069329763926720385\n",
+      "SS std 0.0018433068421031939\n",
+      "Reduction in standard deviation 0.5858642536278911\n",
+      "Effective increase in number of samples 5.830617650463157\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = stz_anti1[:,0]\n",
+    "# strata boundary at \n",
+    "s_boundary = s_mean\n",
+    "c_times_strata1 = av[s<s_boundary]\n",
+    "c_times_strata2 = av[s>=s_boundary]\n",
+    "prob_strata1 = sampler._cdf(s_boundary)\n",
+    "prob_strata2 = 1- prob_strata1\n",
+    "print(\"Reduction in standard deviation in strata1\",1-np.std(c_times_strata1)/np.std(av))\n",
+    "print(\"Reduction in standard deviation in strata2\",1-np.std(c_times_strata2)/np.std(av))\n",
+    "print(np.std(c_times_strata1),np.std(c_times_strata2),np.std(c_times))\n",
+    "\n",
+    "ss_mean = prob_strata1*np.mean(c_times_strata1) + prob_strata2*np.mean(c_times_strata2)\n",
+    "# single sample std\n",
+    "ss_std = np.sqrt((prob_strata1*np.std(c_times_strata1))**2 + (prob_strata2*np.std(c_times_strata2))**2)\n",
+    "print(\"SS mean\",ss_mean)\n",
+    "print(\"SS std\",ss_std)\n",
+    "print(\"Reduction in standard deviation\",1-ss_std/np.std(c_times))\n",
+    "alpha = ss_std/np.std(c_times)\n",
+    "print(\"Effective increase in number of samples\",1/alpha**2)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "virtual-danish",
+   "id": "collaborative-heading",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "precious-artist",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0031473128781488616"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.std(c_times)/np.sqrt(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "surgical-garden",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "pregnant-annual",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fatal-anatomy",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "going-arrow",
    "metadata": {},
    "outputs": [],
    "source": []
